# opencv-ui-cli

./: .gitignore  AGENTS.md  Cargo.toml
scripts/: yolo_detect.py
src/: main.rs  yolo.rs
