[package]
name = "opencv-ui-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = { version = "0.95", features = ["clang-runtime"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
resvg = "0.44"
usvg = "0.44"
